CSS tweaks to dots and fix for long words overflowing their container

--- a/style.css
+++ b/style.css
@@ -102,27 +102,28 @@ h4.timestamp .date {
 .post > .status::before {
 	-webkit-transition: all 0.1s ease-in-out;
 	content: "";
-	width: 12px;
-	height: 12px;
+	width: 16px;
+	height: 16px;
 	position: absolute;
 	top: 50%;
-	right: -21px;
-	margin-top: -6px;
-	border-radius: 6px;
+	right: -23px;
+	margin-top: -8px;
+	border-radius: 8px;
 	background-color:#d1d1d1;
 }
 
 .post.alt > .status::before {
-	left: -21px;
+	left: -23px;
 }
 
 .post:hover > .status::before {
-	-moz-transform: scale(2);
-	-webkit-transform: scale(2);
+	-moz-transform: scale(1.5);
+	-webkit-transform: scale(1.5);
 }
 
 .status .body {
 	padding-left: 63px;
+	word-wrap: break-word;
 }
 
 .status .avatar {
